--- a/package.json
+++ b/package.json
@@ -22,12 +22,8 @@
   "license": "ISC",
   "dependencies": {
     "@clack/prompts": "^0.7.0",
+    "fs-extra": "^11.2.0",
     "picocolors": "^1.1.1",
     "yargs": "^17.7.2"
-  },
-  "devDependencies": {
-    "@types/node": "^22.9.0",
-    "@types/yargs": "^17.0.33",
-    "typescript": "^5.6.3"
   }
 }
