--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   "license": "ISC",
   "dependencies": {
     "@clack/prompts": "^0.7.0",
+    "axios": "^1.7.7",
     "fs-extra": "^11.2.0",
+    "open": "^10.1.0",
     "picocolors": "^1.1.1",
     "yargs": "^17.7.2"
   }
